--- a/InstaPhotoFilters/Base.lproj/Main.storyboard
+++ b/InstaPhotoFilters/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="eL0-ef-8He">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -13,14 +13,14 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="InstaPhotoFilters" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="W2R-Mx-ud7">
-                                <rect key="frame" x="20" y="88" width="374" height="439"/>
+                            <view contentMode="scaleToFill" horizontalHuggingPriority="249" verticalHuggingPriority="249" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" translatesAutoresizingMaskIntoConstraints="NO" id="W2R-Mx-ud7">
+                                <rect key="frame" x="16" y="88" width="358" height="400"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TXA-9t-csj">
-                                        <rect key="frame" x="10" y="10" width="354" height="419"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="249" verticalHuggingPriority="249" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" translatesAutoresizingMaskIntoConstraints="NO" id="TXA-9t-csj">
+                                        <rect key="frame" x="10" y="10" width="338" height="380"/>
                                     </imageView>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -28,24 +28,77 @@
                                     <constraint firstItem="TXA-9t-csj" firstAttribute="leading" secondItem="W2R-Mx-ud7" secondAttribute="leading" constant="10" id="28b-f4-mgQ"/>
                                     <constraint firstAttribute="trailing" secondItem="TXA-9t-csj" secondAttribute="trailing" constant="10" id="KGw-nI-TOg"/>
                                     <constraint firstItem="TXA-9t-csj" firstAttribute="top" secondItem="W2R-Mx-ud7" secondAttribute="top" constant="10" id="fpn-D3-DR0"/>
+                                    <constraint firstAttribute="height" constant="400" id="iWZ-zr-x2U"/>
                                     <constraint firstAttribute="bottom" secondItem="TXA-9t-csj" secondAttribute="bottom" constant="10" id="ldb-zq-y4M"/>
                                 </constraints>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Intensity:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3x8-Rl-Peu">
+                                <rect key="frame" x="16" y="496" width="90" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="90" id="k8q-cb-r3j"/>
+                                    <constraint firstAttribute="height" constant="30" id="lQ7-wv-v8J"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="hhS-Yw-AVA">
+                                <rect key="frame" x="114" y="496" width="260" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="usE-MS-FG0"/>
+                                </constraints>
+                                <connections>
+                                    <action selector="sliderChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="w4t-cQ-oIw"/>
+                                </connections>
+                            </slider>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="dEd-4v-EZO">
+                                <rect key="frame" x="115.99999999999999" y="534" width="254.66666666666663" height="31"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kSE-9C-Cd8">
+                                        <rect key="frame" x="0.0" y="0.0" width="158.33333333333334" height="31"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Change filter"/>
+                                        <connections>
+                                            <action selector="changeFilter:" destination="BYZ-38-t0r" eventType="touchUpInside" id="0sc-Tc-2DV"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a0b-sY-VKG">
+                                        <rect key="frame" x="168.33333333333331" y="0.0" width="86.333333333333314" height="31"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Save"/>
+                                        <connections>
+                                            <action selector="save:" destination="BYZ-38-t0r" eventType="touchUpInside" id="NTU-Xd-N7n"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="hhS-Yw-AVA" secondAttribute="trailing" constant="18" id="AFV-Ox-eV1"/>
+                            <constraint firstItem="hhS-Yw-AVA" firstAttribute="top" secondItem="TXA-9t-csj" secondAttribute="bottom" constant="18" id="D6a-hk-hSO"/>
+                            <constraint firstItem="dEd-4v-EZO" firstAttribute="width" secondItem="hhS-Yw-AVA" secondAttribute="width" multiplier="0.994371" id="Elw-Th-aki"/>
+                            <constraint firstItem="dEd-4v-EZO" firstAttribute="height" secondItem="hhS-Yw-AVA" secondAttribute="height" multiplier="1.03333" id="HDe-nK-DLf"/>
+                            <constraint firstItem="hhS-Yw-AVA" firstAttribute="leading" secondItem="3x8-Rl-Peu" secondAttribute="trailing" constant="10" id="JiA-Z1-7XS"/>
+                            <constraint firstItem="3x8-Rl-Peu" firstAttribute="top" secondItem="TXA-9t-csj" secondAttribute="bottom" constant="18" id="R9A-nJ-65U"/>
+                            <constraint firstItem="3x8-Rl-Peu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="SEX-c9-eYG"/>
                             <constraint firstItem="W2R-Mx-ud7" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="VHz-tT-1bv"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="W2R-Mx-ud7" secondAttribute="bottom" constant="335" id="g4O-km-13S"/>
+                            <constraint firstItem="dEd-4v-EZO" firstAttribute="top" secondItem="hhS-Yw-AVA" secondAttribute="bottom" constant="8" symbolic="YES" id="eAV-qy-qTY"/>
                             <constraint firstItem="W2R-Mx-ud7" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="jh9-Og-zWy"/>
+                            <constraint firstItem="dEd-4v-EZO" firstAttribute="leading" secondItem="hhS-Yw-AVA" secondAttribute="leading" id="vTg-dK-Me5"/>
                             <constraint firstItem="W2R-Mx-ud7" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="xUw-Ha-a6C"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="zmW-NY-uBZ"/>
+                    <connections>
+                        <outlet property="imageView" destination="TXA-9t-csj" id="qAL-vc-wVT"/>
+                        <outlet property="slider" destination="hhS-Yw-AVA" id="wbx-GT-RXC"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="939.13043478260875" y="79.6875"/>
+            <point key="canvasLocation" x="937.68115942028987" y="79.017857142857139"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Qcz-Pv-G0n">
@@ -53,7 +106,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="eL0-ef-8He" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="ZrB-6a-iSo">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <rect key="frame" x="0.0" y="44" width="390" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
